tests/NormalTests/paczka1/fuzzy1/44748972.err
Error in line 18: btMULp1IKbg S417 -2,3
Error in line 16: btMULp1IKbg S417 86,5
Error in line 27: S199 S417 58,8
Error in line 31: ekKFS S746 11,2
